@@ -123,6 +123,9 @@ BUGFIXES:
   ZOOKEEPER-2279: QuorumPeer loadDataBase() error message is incorrect
   (Arshad Mohammad via rakeshr)
 
+  ZOOKEEPER-1803: Add description for pzxid in programmer's guide
+  (Arshad Mohammad via rakeshr)
+
 IMPROVEMENTS:
 
   ZOOKEEPER-1575. adding .gitattributes to prevent CRLF and LF mismatches for
